# weather_api

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  readme.MD  requirements.txt  settings.toml  test_api.py  wsgi.py
app/: __init__.py
app/models/: __init__.py
app/services/: http.py  weather_data.py
app/views/: __init__.py  weather_views.py
tests/: test_api.py
weather/: __init__.py
weather/ext/: __init__.py  cache_config.py  configuration.py  cors.py
weather/models/: __init__.py  city_model.py
weather/services/: http.py  weather_data.py
weather/views/: __init__.py  weather_views.py
