[tool.poetry]
name = "Weather"
version = "0.4.0"
description = ""
authors = ["rafael <barlera1989@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-Caching = "^1.9.0"
gunicorn = "^20.0.4"
dynaconf = "^3.1.2"
requests = "^2.25.1"
environs = "^9.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
ipython = "^7.20.0"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
